Стилизация всех страниц

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,29 @@
-// Начните писать стили здесь
+/* Global */
+
+@import "global/fonts.less";
+@import "global/variables.less";
+@import "global/global.less";
+@import "global/visually-hidden.less";
+
+/* Blocks */
+@import "blocks/header.less";
+@import "blocks/main-nav.less";
+@import "blocks/main.less";
+@import "blocks/promo.less";
+@import "blocks/advantages.less";
+@import "blocks/research.less";
+@import "blocks/reviews.less";
+@import "blocks/tariffs.less";
+@import "blocks/contacts.less";
+@import "blocks/copyright.less";
+@import "blocks/review.less";
+@import "blocks/new-photo.less";
+@import "blocks/button-addphoto.less";
+@import "blocks/text-intro.less";
+@import "blocks/form.less";
+@import "blocks/user.less";
+@import "blocks/achievement.less";
+@import "blocks/user-contact.less";
+@import "blocks/apps.less";
+@import "blocks/emotions.less";
+@import "blocks/form-button.less";
